# lukaskarelat

./: README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: build_docker_images.yml  build_static_sites.yml  deploy.yml  reusable-docker-build.yml
src/backend/caddy/: .gitignore  Caddyfile.j2  Dockerfile  README.md  docker-compose.yml
src/backend/listmonk/: Dockerfile  README.md  docker-compose.yml
src/backend/newsletter/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/backend/newsletter/app/: main.py
src/backend/newsletter/app/core/: configuration.py
src/frontend/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: app.css  app.d.ts  app.html
src/frontend/src/lib/blog/: posts.ts
src/frontend/src/lib/blog/entries/: article1.mdx
src/frontend/src/lib/blog/posts/: 01_template.md  adding-jsonld-to-my-blog.mdx  article1.mdx  article2.mdx  first-setup-of-website.mdx  how-it-started.mdx  opengraph-image-generation-using-sveltekit.mdx  using-sveltekit-with-mdsvex-to-blog.mdx  why-i-started-with-opentofu-and-ansible.mdx
src/frontend/src/lib/components/: Heading.svelte  logo.svelte
src/frontend/src/lib/components/og/: Card.svelte
src/frontend/src/lib/og/: index.ts
src/frontend/src/lib/server/: og.ts  posts.ts
src/frontend/src/plugins/: sitemap-generator.ts
src/frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/frontend/src/routes/blog/: +page.server.ts  +page.svelte  +page.ts
(+18 files in other folders)
